# too-predict

./: .envrc  .gitignore  MANIFEST.org  pyproject.toml  pyrightconfig.json
reports/templates/: edger_de_template.yaml  enrichment_template.yaml
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: compare_normalization.py  cross_validate.py  cross_validation_results.R  curate_dataset.py  feature_selection.R  feature_selection.py  feature_selection_organoid.py  find_overlapping.py  get_counts.py  get_training_meta.py  go_stats.py  interpret_results.R  optimize.py  robustness.py  srun_cross_validate.bash  srun_feature_selection_o.bash  torch_cross_val.py  torch_hpo.py  torch_optimization.py  try_balance.py
scripts/deep/: all_data.yaml  intrinsic_dimension.py  less_tumor_types.yaml  torch_main.py  torch_optimization.py
scripts/explanations/: check_outliers.py  chula_misses.py  combat_ref.R  combat_ref.py  global_importance.py  gtes.R  plots.py  subtyping.R
scripts/feature_selection/: feature_selection.R  feature_selection.py  get_features.R  get_features_auroc.R
scripts/interpretation/: additional_splits.R  check_organoids.R  check_organoids_edgeR.R  compare_chula_organoids.R  compare_tmm_clr.py  cross_validation_results.R  explanations.R  features.R  imbalance.R  interpret_overlap.R  interpret_results.R  purist_chula_paad.py
scripts/interpretation/organoid_vs_primary/: check_organoids.R  check_organoids_edgeR.R  read_results.R
scripts/pdac_crc/: deep.yaml  main.py
scripts/resources/: from_census.py  get_counts.py  get_markers.R  get_single_cell_ref.R  get_single_cell_ref.py  go_mappings.py  normalize_sc_ref.py
scripts/run/: compare_normalization.bash  cross_validate.bash  explain.bash  explain_global.bash  feature_selection.bash  feature_selection_o.bash  find_overlapping.bash  get_counts.bash  optimize.bash  organoid_subtypes.bash  outlier_detection.bash  plots.bash  try_balance.bash
smk/: Snakefile  cross_val.smk  data_augmentation.smk  env.yaml  robustness.smk  torch_cross_val.smk  torch_holdout.smk  torch_optimize.smk
smk/rules/: evaluations.smk
smk/run/: augmentation.sh  cross_val.sh  holdout.sh  optimize.sh
smk/scripts/: data_augmentation.py  format_evaluation.R  shallow_main.py  torch_main.py
src/R/: combat_ref.R  correction.R  enrichment.R  plotting.R  simulation.R  utils.R
src/too_predict/: _train_utils.py  cache.py  corrector.py  evaluation.py  explanation.py  filter.py  go_utils.py  imbalance.py  imputer.py  meta_markers.py  model.py  multitask.py  normalizer.py  optimization.py  plotting.py  purist.py  r_utils.py  range_finder.py  recoder.py  simulation.py  torch_utils.py  transformer.py  unused.py  utils.py
src/too_predict/deep/: nns.py  (+10 more)
tests/: demo_logistic.py  get_meta.R  meta_paths.yaml  test_augmentation.py  test_batch.py  test_bayesprism.R  test_branchnet.py  test_combat_ref.R  test_evaluation.py  test_explanation.py  test_filter.py  test_foundational.py  test_imbalance.py  test_logistic.py  test_markers.py  test_model.py  test_multideconv.R  test_multitask.py  test_nns.py  test_normalizer.py  test_optimization.py  test_random.R  test_range_finder.py  test_recoder.py  test_rust.py  test_transformer.py  test_utils.py
tests/snakemake/: Snakefile  env.yaml  main.py
(+2 files in other folders)
