[project]
name = "too_predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "anndata>=0.11.3",
  "alibi[torch]>=0.9.6",
  "anndata2ri>=1.3.2",
  "dask>=2025.2.0",
  "dask-jobqueue>=0.9.0",
  "imbalanced-learn>=0.13.0",
  "ipython",
  "optuna>=4.2.1",
  "pip>=25.0.1",
  "polars>=1.22.0",
  "optuna",
  "obonet",
  "numpy",
  "pyarrow>=19.0.0",
  "pyhere",
  "torch",
  "pyod>=2.0.3",
  "pypalettes",
  "marsilea",
  "lightning",
  "torchmetrics",
  "pytest>=8.3.4",
  "gseapy",
  "scib",
  "autogenes",
  "rpy2>=3.5.17",
  "scanpy>=1.10.4",
  "scikit-bio>=0.6.3",
  "scikit-learn>=1.6.1",
  "xgboost>=2.1.4",
  "interpret",
]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "too_predict._rust_helpers"


[tool.pyright]
venvPath = "/home/shannc/Bio_SDD/miniforge3/envs/too-predict"
